--- a/command-line/web-template/file.html
+++ b/command-line/web-template/file.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html>
 <head>
 	<link rel="stylesheet" href="css/styles/arduino-light.css">
 	<link rel="stylesheet" href="css/file.css">
@@ -9,3 +11,4 @@
 {{ code }}
 </code></pre>
 </body>
+</html>
