divs instead of spans

--- a/dummy_project/web-example1/example.py.html
+++ b/dummy_project/web-example1/example.py.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <pre><code class="python">
-import optparse<div class="violation" type="E401" message="multiple imports on one line" len="1"></div>, itertools
+import optparse<span class="violation" title="multiple imports on one line">,</span> itertools
 
-print("Hello, World!<div class="violation" type="W292" message="no newline at end of file" len="1"></div>")
+print("Hello, World!<span class="violation" title="no newline at end of file">"</span>)
 </code></pre>
 </body>
