added width attribute to violation divs

--- a/dummy_project/web-example/example.py.html
+++ b/dummy_project/web-example/example.py.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html>
 <head>
 	<link rel="stylesheet" href="css/styles/arduino-light.css">
 	<link rel="stylesheet" href="css/file.css">
@@ -6,8 +8,9 @@
 </head>
 <body>
 <pre><code class="python">
-import optparse<div class="violation" type="E401" message="multiple imports on one line" len="1"></div>, itertools
+import optparse<div class="violation" type="E401" title="multiple imports on one line" style="width:1ch;"></div>, itertools
 
-print("Hello, World!<div class="violation" type="W292" message="no newline at end of file" len="1"></div>")
+print("Hello, World!<div class="violation" type="W292" title="no newline at end of file" style="width:1ch;"></div>")
 </code></pre>
 </body>
+</html>
