--- a/dummy_project/web-example/Index.html
+++ b/dummy_project/web-example/Index.html
@@ -1,37 +1,34 @@
 <head>
-<link rel="stylesheet" href="css/directory.css">
+<link rel="stylesheet" href="css/new.css" >
 </head>
 <body>
-
-<h1> Index </h1>
-
-<table class="directory_contents">
-
-  <tr>
-    <td>
-      <a href=example.py.html>example.py</a>
-    </td>
-    <td>
-      2 errors
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href=ncreview.py.html>ncreview.py</a>
-    </td>
-    <td>
-      81 errors
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href=ncr.html>ncr</a>
-    </td>
-    <td>
-      3 files
-    </td>
-  </tr>
-
-</table>
-
+  <div>
+    <h1> Index </h1>
+    <table class="directory_contents">
+      <tr>
+        <td>
+          <a href=example.py.html>example.py</a>
+        </td>
+        <td>
+          2 errors
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href=ncreview.py.html>ncreview.py</a>
+        </td>
+        <td>
+          81 errors
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href=ncr.html>ncr</a>
+        </td>
+        <td>
+          3 files
+        </td>
+      </tr>
+    </table>
+  <div>
 </body>
