--- a/dummy_project/web-example/ncr.html
+++ b/dummy_project/web-example/ncr.html
@@ -1,37 +1,34 @@
 <head>
-<link rel="stylesheet" href="css/directory.css">
+<link rel="stylesheet" href="css/new.css" >
 </head>
 <body>
-
-<h1> ncr </h1>
-
-<table class="directory_contents">
-
-  <tr>
-    <td>
-      <a href=ncr__datastreamdiff.py.html>datastreamdiff.py</a>
-    </td>
-    <td>
-      108 errors
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href=ncr__datastream.py.html>datastream.py</a>
-    </td>
-    <td>
-      269 errors
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href=ncr__utils.py.html>utils.py</a>
-    </td>
-    <td>
-      15 errors
-    </td>
-  </tr>
-
-</table>
-
+  <div>
+    <h1> ncr </h1>
+    <table class="directory_contents">
+      <tr>
+        <td>
+          <a href=ncr__datastreamdiff.py.html>datastreamdiff.py</a>
+        </td>
+        <td>
+          108 errors
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href=ncr__datastream.py.html>datastream.py</a>
+        </td>
+        <td>
+          269 errors
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href=ncr__utils.py.html>utils.py</a>
+        </td>
+        <td>
+          15 errors
+        </td>
+      </tr>
+    </table>
+  <div>
 </body>
