--- a/dummy_project/web-example/ncr.html
+++ b/dummy_project/web-example/ncr.html
@@ -3,7 +3,9 @@
 </head>
 <body>
   <div>
-    <h1> ncr </h1>
+    <!-- TODO: have directory be a whole path -->
+    <h1><a href=Index.html>/</a>ncr</h1>
+
     <table class="directory_contents">
       <tr>
         <td>
@@ -11,6 +13,14 @@
         </td>
         <td>
           108 errors
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href=ncr__utils.py.html>utils.py</a>
+        </td>
+        <td>
+          15 errors
         </td>
       </tr>
       <tr>
@@ -23,10 +33,10 @@
       </tr>
       <tr>
         <td>
-          <a href=ncr__utils.py.html>utils.py</a>
+          <a href=ncr__subdir.html>subdir</a>
         </td>
         <td>
-          15 errors
+          1 files
         </td>
       </tr>
     </table>
