--- a/dummy_project/web-example/ncr__datastreamdiff.py.html
+++ b/dummy_project/web-example/ncr__datastreamdiff.py.html
@@ -7,6 +7,8 @@
 	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+<h1><a href=Index.html>/</a><a href=ncr.html>ncr/</a>datastreamdiff.py</h1>
+
 <pre><code class="python">
 '''Datastream comparison classes for the ncreview tool.
 
