--- a/dummy_project/web-example/ncr__utils.py.html
+++ b/dummy_project/web-example/ncr__utils.py.html
@@ -7,6 +7,8 @@
 	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+<h1><a href=Index.html>/</a><a href=ncr.html>ncr/</a>utils.py</h1>
+
 <pre><code class="python">
 '''A few miscellaneous functions and objects used by the datastream and datastr<div class="violation" type="E501" title="line too long (95 &gt; 79 characters)" style="width:1ch;"></div>eamdiff modules.
 '''
