--- a/dummy_project/web-example/ncreview.py.html
+++ b/dummy_project/web-example/ncreview.py.html
@@ -7,6 +7,8 @@
 	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+<h1><a href=Index.html>/</a>ncreview.py</h1>
+
 <pre><code class="python">
 #!/apps/base/python3/bin/python3
 '''Command line interface to the datastream and datastreamdiff review modules.
