--- a/dummy_project/web-example/Index.html
+++ b/dummy_project/web-example/Index.html
@@ -3,7 +3,9 @@
 </head>
 <body>
   <div>
-    <h1> Index </h1>
+    <!-- TODO: have directory be a whole path -->
+    <h1></h1>
+
     <table class="directory_contents">
       <tr>
         <td>
