--- a/dummy_project/web-example/example.py.html
+++ b/dummy_project/web-example/example.py.html
@@ -7,6 +7,8 @@
 	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+<h1><a href=Index.html>/</a>example.py</h1>
+
 <pre><code class="python">
 import optparse<div class="violation" type="E401" title="multiple imports on one line" style="width:1ch;"></div>, itertools
 
