--- a/dummy_project/web-example/ncr__subdir.html
+++ b/dummy_project/web-example/ncr__subdir.html
@@ -4,7 +4,7 @@
 <body>
   <div>
     <!-- TODO: have directory be a whole path -->
-    <h1><a href=Index.html>/</a><a href=ncr.html>ncr/</a>subdir</h1>
+    <h1><a href=Index.html>//</a><a href=ncr.html>ncr/</a>subdir</h1>
 
     <table class="directory_contents">
       <tr>
@@ -12,7 +12,7 @@
           <a href=ncr__subdir__utils.py.html>utils.py</a>
         </td>
         <td>
-          15 errors
+          1 errors
         </td>
       </tr>
     </table>
