--- a/dummy_project/web-example/example.py.html
+++ b/dummy_project/web-example/example.py.html
@@ -7,12 +7,12 @@
 	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
-<h1><a href=Index.html>/</a>example.py</h1>
+<h1><a href=Index.html>//</a>example.py</h1>
 
 <pre><code class="python">
-import optparse<div class="violation" type="E401" title="multiple imports on one line" style="width:1ch;"></div>, itertools
+import optparse<div class="violation" type="E401" style="width:1ch;"><div class="error">multiple imports on one line\nexample.py:3:23: W292 no newline at end of file\n'</div></div>, itertools
 
-print("Hello, World!<div class="violation" type="W292" title="no newline at end of file" style="width:1ch;"></div>")
+print("Hello, World!")
 </code></pre>
 </body>
 </html>
