--- a/dummy_project/web-example/ncr.html
+++ b/dummy_project/web-example/ncr.html
@@ -4,23 +4,15 @@
 <body>
   <div>
     <!-- TODO: have directory be a whole path -->
-    <h1><a href=Index.html>/</a>ncr</h1>
+    <h1><a href=Index.html>//</a>ncr</h1>
 
     <table class="directory_contents">
-      <tr>
-        <td>
-          <a href=ncr__datastreamdiff.py.html>datastreamdiff.py</a>
-        </td>
-        <td>
-          108 errors
-        </td>
-      </tr>
       <tr>
         <td>
           <a href=ncr__utils.py.html>utils.py</a>
         </td>
         <td>
-          15 errors
+          1 errors
         </td>
       </tr>
       <tr>
@@ -28,7 +20,15 @@
           <a href=ncr__datastream.py.html>datastream.py</a>
         </td>
         <td>
-          269 errors
+          1 errors
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href=ncr__datastreamdiff.py.html>datastreamdiff.py</a>
+        </td>
+        <td>
+          1 errors
         </td>
       </tr>
       <tr>
