--- a/dummy_project/web-example/ncr__subdir__utils.py.html
+++ b/dummy_project/web-example/ncr__subdir__utils.py.html
@@ -7,10 +7,10 @@
 	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
-<h1><a href=Index.html>/</a><a href=ncr.html>ncr/</a><a href=ncr__subdir.html>subdir/</a>utils.py</h1>
+<h1><a href=Index.html>//</a><a href=ncr.html>ncr/</a><a href=ncr__subdir.html>subdir/</a>utils.py</h1>
 
 <pre><code class="python">
-'''A few miscellaneous functions and objects used by the datastream and datastr<div class="violation" type="E501" title="line too long (95 &gt; 79 characters)" style="width:1ch;"></div>eamdiff modules.
+'''A few miscellaneous functions and objects used by the datastream and datastr<div class="violation" type="E501" style="width:1ch;"><div class="error">line too long (95 &gt; 79 characters)\nncr/subdir/utils.py:13:16: W503 line break before binary operator\nncr/subdir/utils.py:13:17: E225 missing whitespace around operator\nncr/subdir/utils.py:15:1: E302 expected 2 blank lines, found 1\nncr/subdir/utils.py:21:1: E302 expected 2 blank lines, found 1\nncr/subdir/utils.py:26:1: E302 expected 2 blank lines, found 1\nncr/subdir/utils.py:35:1: E302 expected 2 blank lines, found 1\nncr/subdir/utils.py:49:1: E302 expected 2 blank lines, found 1\nncr/subdir/utils.py:50:80: E501 line too long (82 &gt; 79 characters)\nncr/subdir/utils.py:63:80: E501 line too long (93 &gt; 79 characters)\nncr/subdir/utils.py:63:93: E502 the backslash is redundant between brackets\nncr/subdir/utils.py:64:17: E128 continuation line under-indented for visual indent\nncr/subdir/utils.py:66:1: E302 expected 2 blank lines, found 1\nncr/subdir/utils.py:77:80: E501 line too long (85 &gt; 79 characters)\nncr/subdir/utils.py:78:80: E501 line too long (85 &gt; 79 characters)\n'</div></div>eamdiff modules.
 '''
 import re
 import sys
@@ -22,18 +22,18 @@ import datetime as dt
 # regex for checking netcdf file names
 ncfname_re = \
     re.compile('^([a-z]{3})([a-z0-9]*)([A-Z]\d+)\.([a-z]\d).'
-   <div class="violation" type="W503" title="line break before binary operator" style="width:1ch;"></div> <div class="violation" type="E225" title="missing whitespace around operator" style="width:1ch;"></div>           +'(\d{4})(\d\d)(\d\d)\.(\d\d)(\d\d)(\d\d)\<div class="violation" type="E302" title="expected 2 blank lines, found 1" style="width:1ch;"></div>.(cdf|nc)$')
+               +'(\d{4})(\d\d)(\d\d)\.(\d\d)(\d\d)(\d\d)\.(cdf|nc)$')
 
 def file_time(fname):
     '''Return time in netcdf file name as a datetime object
     '''
     match = ncfname_re.match(fname)
-    return dt.datetime(*map(int, match.groups()[4:10])) <div class="violation" type="E302" title="expected 2 blank lines, found 1" style="width:1ch;"></div>if match else None
+    return dt.datetime(*map(int, match.groups()[4:10])) if match else None
 
 def file_datastream(fname):
     '''return the datstream substring from a filename'''
     match = ncfname_re.match(fname)
-    return ''.j<div class="violation" type="E302" title="expected 2 blank lines, found 1" style="width:1ch;"></div>oin(match.groups()[:4])
+    return ''.join(match.groups()[:4])
 
 def store_difference(func):
     '''Decorator that causes difference() methods to store and reuse their result.
@@ -41,7 +41,7 @@ def store_difference(func):
     def difference(self):
         if not hasattr(self, '_difference'):
             setattr(self, '_difference', func(self))
-        return self._<div class="violation" type="E302" title="expected 2 blank lines, found 1" style="width:1ch;"></div>difference
+        return self._difference
     return difference
 
 def json_section(self, contents):
@@ -55,11 +55,11 @@ def json_section(self, contents):
     if hasattr(self, 'difference'):
             sec['difference'] = self.difference()
     elif hasattr(self, '_difference'):
-        sec['<div class="violation" type="E302" title="expected 2 blank lines, found 1" style="width:1ch;"></div>difference'] = self._difference
+        sec['difference'] = self._difference
     return sec
 
 def JEncoder(obj):
-    ''' Defines a few default <div class="violation" type="E501" title="line too long (82 &gt; 79 characters)" style="width:1ch;"></div>behaviours when the json encoder doesn't know what to do
+    ''' Defines a few default behaviours when the json encoder doesn't know what to do
     '''
     try:
         if np.isnan(obj):
@@ -72,7 +72,7 @@ def JEncoder(obj):
         try:
             return str(obj)
         except:
-            raise<div class="violation" type="E501" title="line too long (93 &gt; 79 characters)" style="width:1ch;"></div> TypeError('O<div class="violation" type="E502" title="the backslash is redundant between brackets" style="width:1ch;"></div>bject of type {0}<div class="violation" type="E128" title="continuation line under-indented for visual indent" style="width:1ch;"></div> with value of {1} is not JSON<div class="violation" type="E302" title="expected 2 blank lines, found 1" style="width:1ch;"></div> serializable' \
+            raise TypeError('Object of type {0} with value of {1} is not JSON serializable' \
                 .format(type(obj), repr(obj)))
 
 def shared_times(old_ftimes, new_ftimes):
@@ -86,8 +86,8 @@ def shared_times(old_ftimes, new_ftimes):
         yeilds the tuple:
             beg    beginning of the shared time interval
             end    end of the shared time interval
-   <div class="violation" type="E501" title="line too long (85 &gt; 79 characters)" style="width:1ch;"></div>         old_i  index of interval in old_ftimes that overlaps this shared interval
-  <div class="violation" type="E501" title="line too long (85 &gt; 79 characters)" style="width:1ch;"></div>          new_i  index of interval in new_ftimes that overlaps this shared interval
+            old_i  index of interval in old_ftimes that overlaps this shared interval
+            new_i  index of interval in new_ftimes that overlaps this shared interval
     '''
     old_itr = iter(enumerate(old_ftimes))
     new_itr = iter(enumerate(new_ftimes))
