added py3 support and robustness

--- a/dummy_project/web-example/ncr__utils.py.html
+++ b/dummy_project/web-example/ncr__utils.py.html
@@ -10,7 +10,7 @@
 <h1><a href=Index.html>//</a><a href=ncr.html>ncr/</a>utils.py</h1>
 
 <pre><code class="python">
-'''A few miscellaneous functions and objects used by the datastream and datastr<div class="violation" type="E501" style="width:1ch;"><div class="error">line too long (95 &gt; 79 characters)\nncr/utils.py:13:16: W503 line break before binary operator\nncr/utils.py:13:17: E225 missing whitespace around operator\nncr/utils.py:15:1: E302 expected 2 blank lines, found 1\nncr/utils.py:21:1: E302 expected 2 blank lines, found 1\nncr/utils.py:26:1: E302 expected 2 blank lines, found 1\nncr/utils.py:35:1: E302 expected 2 blank lines, found 1\nncr/utils.py:49:1: E302 expected 2 blank lines, found 1\nncr/utils.py:50:80: E501 line too long (82 &gt; 79 characters)\nncr/utils.py:63:80: E501 line too long (93 &gt; 79 characters)\nncr/utils.py:63:93: E502 the backslash is redundant between brackets\nncr/utils.py:64:17: E128 continuation line under-indented for visual indent\nncr/utils.py:66:1: E302 expected 2 blank lines, found 1\nncr/utils.py:77:80: E501 line too long (85 &gt; 79 characters)\nncr/utils.py:78:80: E501 line too long (85 &gt; 79 characters)\n'</div></div>eamdiff modules.
+'''A few miscellaneous functions and objects used by the datastream and datastr<div class="violation" type="{}" style="width:{}ch;"><div class="error">E501</div></div>eamdiff modules.
 '''
 import re
 import sys
