--- a/dummy_project/web-example/example.py.html
+++ b/dummy_project/web-example/example.py.html
@@ -10,9 +10,9 @@
 <h1><a href=Index.html>//</a>example.py</h1>
 
 <pre><code class="python">
-import optparse<div class="violation" type="{}" style="width:{}ch;"><div class="error">E401</div></div>, itertools
+import optparse<div class="violation" type="E401" style="width:1ch;"><div class="error">multiple imports on one line</div></div>, itertools
 
-print("Hello, World!")
+print("Hello, World!")<div class="violation" type="W292" style="width:1ch;"><div class="error">no newline at end of file</div></div>
 </code></pre>
 </body>
 </html>
