--- a/dummy_project/web-example/index.html
+++ b/dummy_project/web-example/index.html
@@ -1,10 +1,11 @@
+
 <head>
-<link rel="stylesheet" href="css/new.css" >
+<link rel="stylesheet" href="css/directory.css" >
 </head>
 <body>
   <div>
     <!-- TODO: have directory be a whole path -->
-    <h1>Index</h1>
+    <h1></h1>
 
     <table class="directory_contents">
       <tr>
@@ -25,10 +26,18 @@
       </tr>
       <tr>
         <td>
+          <a href=test.rb.html>test.rb</a>
+        </td>
+        <td>
+          14 errors
+        </td>
+      </tr>
+      <tr>
+        <td>
           <a href=ncr.html>ncr</a>
         </td>
         <td>
-          4 files
+          3 files
         </td>
       </tr>
     </table>
