--- a/dummy_project/web-example/ncr.html
+++ b/dummy_project/web-example/ncr.html
@@ -1,5 +1,6 @@
+
 <head>
-<link rel="stylesheet" href="css/new.css" >
+<link rel="stylesheet" href="css/directory.css" >
 </head>
 <body>
   <div>
@@ -7,6 +8,14 @@
     <h1><a href=index.html>/</a>ncr</h1>
 
     <table class="directory_contents">
+      <tr>
+        <td>
+          <a href=ncr__utils.py.html>utils.py</a>
+        </td>
+        <td>
+          15 errors
+        </td>
+      </tr>
       <tr>
         <td>
           <a href=ncr__datastream.py.html>datastream.py</a>
@@ -21,14 +30,6 @@
         </td>
         <td>
           108 errors
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href=ncr__utils.py.html>utils.py</a>
-        </td>
-        <td>
-          15 errors
         </td>
       </tr>
       <tr>
