--- a/command-line/web-template/directory.html
+++ b/command-line/web-template/directory.html
@@ -19,7 +19,7 @@
 #}
 
 <head>
-<link rel="stylesheet" href="css/new.css" >
+<link rel="stylesheet" href="css/directory.css" >
 </head>
 <body>
   <div>
